Removed sample posts and partial pposts about devops

--- a/about.html
+++ b/about.html
@@ -1,12 +1,18 @@
 ---
 layout: page
-title: "About"
+title: "About Dave"
 description: "This is what I do."
 header-img: "img/about-bg.jpg"
 ---
 
-<p>I have been involved with software for over 20 years. </p>
+<h4>Who is Dave?</h4>
+<p>Dave Diehl is an experienced agile coach, software developer, and project manager. He has written software
+in the retail, financial, and defense sectors. In the last few years, Dave has led the agile change initiative
+at a Fortune 500 company and is now learning about how to make agile teams more productive with DevOps. </p>
 
-<p>My mission is to help software teams and and</p>
+<h4>Why DevOps?</h4>
+<p>Without the ability to release quickly without quality problems, agile methods fail to meet customer expectations.
+While it's great to demo the software every two weeks, what happens when you can't release it?
 
-<p>This blog is a test to see how quickly I can use the Jekyll format to try out a professional looking blog.</p>
+I'm excited to learn more about how DevOps can help teams be more effective by bringing the best of
+process, tools, and technology. </p>
