--- a/about.html
+++ b/about.html
@@ -16,3 +16,10 @@ While it's great to demo the software every two weeks, what happens when you can
 
 I'm excited to learn more about how DevOps can help teams be more effective by bringing the best of
 process, tools, and technology. </p>
+
+<h5>Disclaimer</h5>
+Any views and opinions expressed in this blog are mine alone and do not represent my employer or any
+other organization I am a part of. All of the content on the blog is mine and you cannot publish it without my consent.
+
+I reserve the rights to edit and delete comments for any reason.  I also may choose to change these policies at my
+sole discretion.  
